applications/test-task-todo/todo-svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: todo-svc
  namespace: test-task-todo

spec:
  selector:
    app: todo

  ports:
    - name: http
      port: 8080
      targetPort: http
