applications/test-task-todo/todo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-task-todo-ingress
  namespace: test-task-todo
  annotations:
    cert-manager.io/cluster-issuer: infisical-acme

spec:
  tls:
    - secretName: test-task-todo-tls-secret
      hosts:
        - test-todo.nullmonkeys.com

  rules:
    - host: test-todo.nullmonkeys.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-svc
                port:
                  number: 8080
